# to-do-list-flask

./: .dockerignore  .editorconfig  .gitignore  Makefile  README.md  alembic_autogenerate.py  config.py  constants.py  docker-compose-pytest.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_config.py  pyproject.toml  run.py  wsgi.py
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_data_migration.py
app/: __init__.py
app/api/: __init__.py
app/api/classifiers/: __init__.py  repo.py  schemas.py  service.py  views.py
app/api/tasks/: __init__.py  repo.py  schemas.py  service.py  views.py
app/api/users/: __init__.py  repo.py  schemas.py  service.py  views.py
app/models/: __init__.py  base.py  classifiers.py  tasks.py  users.py
app/tools/: jwt.py  session.py
config/: .env.template
data/: cl_task_status.sql
docker/api/: Dockerfile
docker/prod/api/: Dockerfile  run_prod.sh
docker/utils/: entrypoint.sh
tests/: conftest.py  functions.py  test_classifiers_api.py  test_task_api.py  test_users_api.py
